maep (1.1) unstable; urgency=low

  * Added application menu
  * Added about box
  * Added /opt-ified icon processing
  * Added browser interface
  * Added track import/export/capture
  * Enabled auto /opt-ification for binary/app icons/...

 -- Till Harbaum <till@harbaum.org>  Mon, 28 Dec 2009 10:34:22 +0100

maep (1.0.2) unstable; urgency=low

  * Fixed GPS disable on diablo/chinook
  * Optimized map center handling
	
 -- Till Harbaum <till@harbaum.org>  Thu, 24 Dec 2009 20:38:43 +0100

maep (1.0.1) unstable; urgency=low

  * Keep map centered on configure, no need for app to catch event anymore
  * Added Public Transport map from öpnvkarte.de
	
 -- Till Harbaum <till@harbaum.org>  Fri, 11 Dec 2009 11:05:37 +0100

maep (1.0) unstable; urgency=low

  * Initial release based on gpxview 0.9.0

 -- Till Harbaum <till@harbaum.org>  Mon, 07 Dec 2009 18:25:10 +0100